<resources>
    <string name="app_name">FerroliAfterSales</string>
    <string name="shp_name" translatable="false">APP_SHP</string>
    <string name="shp_emp_id" translatable="false">shp_emp_id</string>
    <string name="shp_emp_name" translatable="false">shp_emp_name</string>
    <string name="shp_emp_appoint_level" translatable="false">shp_emp_appoint_level</string>

    <string name="app_menu_title_1">Main Window</string>
    <string name="app_menu_title_2">Agent Order</string>
    <string name="app_menu_title_3">part search</string>
    <string name="app_menu_title_4">share files</string>
    <string name="app_menu_title_5">information entry</string>
    <string name="app_menu_title_6">product search</string>
    <string name="app_menu_title_7">Task list</string>
    <string name="app_menu_title_8">Task delegation</string>
    <string name="app_menu_title_9">My Task</string>
    <string name="app_menu_title_10">Task operation</string>
    <string name="app_menu_title_11">Sales finish</string>
    <string name="app_menu_title_12">Finish operation</string>

    <string name="app_save">Save</string>
    <string name="app_money" translatable="false">¥</string>
    <string name="app_default_num" translatable="false">1</string>
    <string name="app_refresh">refresh</string>
    <string name="app_search">search</string>
    <string name="app_select">selected</string>
    <string name="app_delete">delete</string>
    <string name="app_error">Network service error, please try again.</string>
    <string name="app_input_null">Please enter the search content</string>
    <string name="app_number_1" translatable="false">1</string>
    <string name="app_image_view">image view</string>
    <string name="app_title_1">user login</string>
    <string name="app_title_2">ferroli launcher</string>
    <string name="app_num">quantity</string>
    <string name="app_price">price</string>
    <string name="app_to" translatable="false">-></string>
    <string name="app_state">state</string>
    <string name="app_function_button">function button</string>
    <string name="app_remark">remark</string>
    <string name="app_user_photo">User photo</string>
    <string name="app_remark_input">Input remark</string>
    <string name="app_subtract" translatable="false">-</string>
    <string name="app_equal" translatable="false">=</string>
    <string name="app_save_passed">Save passed</string>

    <string name="agent_order_hint_1">attn</string>
    <string name="agent_order_hint_2">tel</string>
    <string name="agent_order_hint_3">address</string>
    <string name="agent_order_hint_4">remark</string>
    <string name="agent_order_hint_5">parts information</string>
    <string name="agent_order_hint_6">part image</string>
    <string name="agent_order_hint_7">add qty</string>
    <string name="agent_order_hint_8">minus qty</string>
    <string name="agent_order_hint_9">qty</string>
    <string name="agent_order_hint_10">add part</string>
    <string name="agent_order_hint_11">enter part number or name to find</string>
    <string name="agent_order_hint_12">selected part type</string>
    <string name="agent_order_hint_13">Account balance</string>
    <string name="agent_order_hint_14">sum</string>
    <string name="agent_order_hint_15">surplus</string>

    <string name="login_hint_1">Sign in to continue</string>
    <string name="login_hint_2">user name</string>
    <string name="login_hint_3">password</string>
    <string name="login_hint_4">*If you are unable to log in, please contact IT to help you.</string>
    <string name="login_hint_5">login failed,please try again</string>
    <string name="login_hint_6">login</string>

    <string name="share_file_view_hint_1">file view</string>

    <string name="sales_order_hint_1">province</string>
    <string name="sales_order_hint_2">city</string>
    <string name="sales_order_hint_3">district</string>
    <string name="sales_order_hint_4">tel</string>
    <string name="sales_order_hint_5">name</string>
    <string name="sales_order_hint_6">address</string>
    <string name="sales_order_hint_9">street and house number</string>
    <string name="sales_order_hint_7">backup phone 1</string>
    <string name="sales_order_hint_8">backup phone 2</string>
    <string name="sales_order_hint_10">Machine model</string>
    <string name="sales_order_hint_11">add machine</string>
    <string name="sales_order_hint_12">Product name or type</string>
    <string name="sales_order_hint_13">retail price</string>
    <string name="sales_order_hint_14">purchasing date</string>
    <string name="sales_order_hint_15">appointment date</string>

    <string name="sales_appoint_hint_1">Enter phone to query</string>
    <string name="sales_appoint_hint_2">Purchased products</string>
    <string name="sales_appoint_hint_3">After sales type</string>
    <string name="sales_appoint_hint_4">To whom</string>
    <string name="sales_appoint_hint_5">Order information</string>
    <string name="sales_appoint_hint_6">Appoint no</string>
    <string name="sales_appoint_hint_7">Customer info</string>
    <string name="sales_appoint_hint_8">Appoint info</string>

    <string name="sales_finish_hint_1">Normal statement</string>
    <string name="sales_finish_hint_2">Tel statement</string>
    <string name="sales_finish_hint_3">Product info</string>
    <string name="sales_finish_hint_4">Part Info</string>
    <string name="sales_finish_hint_5">Service category</string>
    <string name="sales_finish_hint_6">In Warranty</string>
    <string name="sales_finish_hint_7">Processing date</string>
    <string name="sales_finish_hint_8">Product QR code</string>
    <string name="sales_finish_hint_9">Scan product QR code</string>
    <string name="sales_finish_hint_10">Select product</string>
    <string name="sales_finish_hint_11">Information filling</string>
    <string name="sales_finish_hint_12">Completion date</string>
    <string name="sales_finish_hint_13">QR code state</string>

    <string name="sec_main_hint_1">Appoint status</string>
    <string name="sec_main_hint_2">Not appoint</string>
    <string name="sec_main_hint_3">Appoint to me</string>
    <string name="sec_main_hint_4">To be completed</string>
    <string name="sec_main_hint_5">To be reviewed</string>

</resources>