<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_1_main_navigation"
        android:checkableBehavior="single">
        <item
            android:id="@+id/secMainFragment"
            android:icon="@drawable/ic_main"
            android:title="@string/app_menu_title_1" />
        <item
            android:id="@+id/shareFileViewFragment"
            android:icon="@drawable/ic_attach_file"
            android:title="@string/app_menu_title_4" />
    </group>
    <group
        android:id="@+id/group_2_main_navigation"
        android:checkableBehavior="single">
        <item
            android:id="@+id/agentOrderFragment"
            android:icon="@drawable/ic_agent_order"
            android:title="@string/app_menu_title_2" />
    </group>
    <group
        android:id="@+id/group_3_main_navigation"
        android:checkableBehavior="single">
        <item
            android:id="@+id/salesOrderFragment"
            android:icon="@drawable/ic_sales_order"
            android:title="@string/app_menu_title_5" />
        <item
            android:id="@+id/salesAppointFragment"
            android:icon="@drawable/ic_sales_appoint"
            android:title="@string/app_menu_title_7" />
    </group>
</menu>