<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/secMainFragment">

    <fragment
        android:id="@+id/secMainFragment"
        android:name="com.ferroli.after_sales.secMain.SecMainFragment"
        android:label="@string/app_menu_title_1"
        tools:layout="@layout/sec_main_fragment" />
    <fragment
        android:id="@+id/agentOrderFragment"
        android:name="com.ferroli.after_sales.agentOrder.AgentOrderFragment"
        android:label="@string/app_menu_title_2"
        tools:layout="@layout/agent_order_fragment" >
        <action
            android:id="@+id/action_agentOrderFragment_to_basePartInfoFragment"
            app:destination="@id/basePartInfoFragment" />
        <action
            android:id="@+id/action_agentOrderFragment_to_partImageViewFragment"
            app:destination="@id/partImageViewFragment" />
    </fragment>
    <fragment
        android:id="@+id/basePartInfoFragment"
        android:name="com.ferroli.after_sales.basePartInfo.BasePartInfoFragment"
        android:label="@string/app_menu_title_3"
        tools:layout="@layout/base_part_info_fragment" >
        <action
            android:id="@+id/action_basePartInfoFragment_to_partImageViewFragment"
            app:destination="@id/partImageViewFragment" />
    </fragment>
    <fragment
        android:id="@+id/partImageViewFragment"
        android:name="com.ferroli.after_sales.partImageView.PartImageViewFragment"
        android:label="@string/app_image_view"
        tools:layout="@layout/fragment_part_image_view" />
    <fragment
        android:id="@+id/shareFileViewFragment"
        android:name="com.ferroli.after_sales.shareFileView.ShareFileViewFragment"
        android:label="@string/app_menu_title_4"
        tools:layout="@layout/fragment_share_file_view" />
    <fragment
        android:id="@+id/salesOrderFragment"
        android:name="com.ferroli.after_sales.salesOrder.SalesOrderFragment"
        android:label="@string/app_menu_title_5"
        tools:layout="@layout/fragment_sales_order" >
        <action
            android:id="@+id/action_salesOrderFragment_to_baseProductInfoFragment"
            app:destination="@id/baseProductInfoFragment" />
    </fragment>
    <fragment
        android:id="@+id/baseProductInfoFragment"
        android:name="com.ferroli.after_sales.baseProductInfo.BaseProductInfoFragment"
        android:label="@string/app_menu_title_6"
        tools:layout="@layout/fragment_base_product_info" />
    <fragment
        android:id="@+id/salesAppointFragment"
        android:name="com.ferroli.after_sales.salesAppoint.SalesAppointFragment"
        android:label="@string/app_menu_title_7"
        tools:layout="@layout/fragment_sales_appoint">
        <action
            android:id="@+id/action_salesAppointFragment_to_salesAppointOperationFragment"
            app:destination="@id/salesAppointOperationFragment" />
    </fragment>
    <fragment
        android:id="@+id/salesAppointOperationFragment"
        android:name="com.ferroli.after_sales.salesAppoint.SalesAppointOperationFragment"
        android:label="@string/app_menu_title_8"
        tools:layout="@layout/fragment_sales_appoint_operation" />
    <fragment
        android:id="@+id/salesAppointLineFragment"
        android:name="com.ferroli.after_sales.salesAppointLine.SalesAppointLineFragment"
        android:label="@string/app_menu_title_9"
        tools:layout="@layout/fragment_sales_appoint_line" >
        <action
            android:id="@+id/action_salesAppointLineFragment_to_salesAppointLineOperationFragment"
            app:destination="@id/salesAppointLineOperationFragment" />
    </fragment>
    <fragment
        android:id="@+id/salesAppointLineOperationFragment"
        android:name="com.ferroli.after_sales.salesAppointLine.SalesAppointLineOperationFragment"
        android:label="@string/app_menu_title_10"
        tools:layout="@layout/fragment_sales_appoint_line_operation" />
    <fragment
        android:id="@+id/salesFinishFragment"
        android:name="com.ferroli.after_sales.salesFinish.SalesFinishFragment"
        android:label="@string/app_menu_title_11"
        tools:layout="@layout/fragment_sales_finish">
        <action
            android:id="@+id/action_salesFinishFragment_to_salesFinishOperationFragment"
            app:destination="@id/salesFinishOperationFragment" />
    </fragment>
    <fragment
        android:id="@+id/salesFinishOperationFragment"
        android:name="com.ferroli.after_sales.salesFinish.SalesFinishOperationFragment"
        android:label="@string/app_menu_title_12"
        tools:layout="@layout/fragment_sales_finish_operation" >
        <action
            android:id="@+id/action_salesFinishOperationFragment_to_basePartInfoFragment"
            app:destination="@id/basePartInfoFragment" />
        <action
            android:id="@+id/action_salesFinishOperationFragment_to_baseProductInfoFragment"
            app:destination="@id/baseProductInfoFragment" />
    </fragment>
</navigation>