<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutMainSalesOrder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".salesOrder.SalesOrderFragment" >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout1SalesOrder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:endIconDrawable="@drawable/ic_search"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_phone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tbCITelSalesOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sales_order_hint_4"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout2SalesOrder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout1SalesOrder"
        app:startIconDrawable="@drawable/ic_person">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tbCINameSalesOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sales_order_hint_5"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout3SalesOrder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout2SalesOrder">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tbProvinceSalesOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sales_order_hint_1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout4SalesOrder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout3SalesOrder">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tbCitySalesOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sales_order_hint_2" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout5SalesOrder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout4SalesOrder">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tbDistrictSalesOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sales_order_hint_3" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout6SalesOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout5SalesOrder"
        app:startIconDrawable="@drawable/ic_place">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tbCIAddressSalesOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sales_order_hint_6"
            android:inputType="textMultiLine"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>